# pyroll-profile-bulging

./: hatch.toml  pyproject.toml
docs/: docs.tex
pyroll/lee_profile_model/: __init__.py  roll_pass.py
pyroll/profile_bulging/: __init__.py  helpers.py  roll_pass.py  symmetric_roll_pass.py  three_roll_pass.py
tests/: test_solve.py  test_solve_3rp_round_flat_flat.py  test_solve_3rp_round_oval_oval.py  test_solve_oval_square_oval_square.py  test_solve_round_oval_round.py  test_solve_square_diamond_square.py
